--- a/views/partials/initationPage/InitiatedScene.ejs
+++ b/views/partials/initationPage/InitiatedScene.ejs
@@ -6,7 +6,7 @@
 	<div class = "m-auto grid gap-[10px] mt-[100px] sm:mt-[100px] md:mt-[0px] w-11/12 sm:w-5/12 
     z-[2] relative">
         <img src = '<%= GoldOrnamentalTop%>' alt = "Ornamental Line" class = "mx-auto sm:mt-10 select-none"/>
-		<h1 class = "text-center text-4xl sm:text-5xl uppercase text-[#e48f1a]">Welcome!</h1>
+		<h1 class = "text-center text-4xl sm:text-5xl uppercase text-[#e48f1a]">Welcome to the club!</h1>
         <h2 class = "text-center text-3xl text-white">You have been initiated as a member at 
         <span class = "text-[#e48f1a] uppercase">Henry's Speakeasy</span>!</h2>
 		 <button
