--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 <div 
 	id="footer"
-	class = "w-full h-[100px] bg-[#555150] absolute bottom-0 left-0 right-0
+	class = "w-full h-[100px] absolute bottom-0 left-0 right-0
 	bg-black"
->
-
+>	
+	<% var year = new Date().getFullYear();%>
+	<div class = "text-center text-[#e48f1a] mt-5 text-2xl">FilmDash &copy;<%=year  %></div>
 </div>
