--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,5 +4,5 @@
 	bg-black"
 >	
 	<% var year = new Date().getFullYear();%>
-	<div class = "text-center text-[#e48f1a] mt-5 text-2xl">FilmDash &copy;<%=year  %></div>
+	<div class = "text-center text-[#e48f1a] mt-5 text-2xl">Henry's Speakeasy &copy;<%=year %></div>
 </div>
