added more bottom padding to profile pics on user list

--- a/views/user/userList.ejs
+++ b/views/user/userList.ejs
@@ -60,7 +60,7 @@
                var FrameStyle = "w-[266px] h-auto mx-auto"
             %>
             <% membersList.forEach(member => { %> 
-                <div>
+                <div class = "mb-[70px]">
                     <div 
                         class = " w-11/12 mx-auto cursor-pointer"
                         onclick = "location.href='/user/<%= member._id%>'">
