--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel ="stylesheet" href='stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/style.css'> 
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
 </head>
