--- a/views/initiationForm.ejs
+++ b/views/initiationForm.ejs
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Henry's Speakeasy</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel ="stylesheet" href='stylesheets/style.css'> 
-  <link rel ="stylesheet" href='stylesheets/tailwind.css'>
+  <link rel ="stylesheet" href='/stylesheets/style.css'> 
+  <link rel ="stylesheet" href='/stylesheets/tailwind.css'>
   <link rel="icon" type="image/x-icon" href="/assets/images/SpeakeasyFavicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
   <style>
@@ -77,8 +77,8 @@
                       <p class = "text-[#dbdbdb] text-2xl text-center mt-10">"I am an odd number. Take away a letter and I become even. What number am I?""</p>
                       <img src = '<%= Ornamental_bottom %>' alt = "Ornamental Line" class = "mx-auto sm:mt-10"/>
                   </div>
-                  <%- include('partials/initationPage/InitiatedScene')%>
               </div>
+              <%- include('partials/initationPage/InitiatedScene')%>
           </div>
       </div>
       <%- include('partials/footer') %>
