--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -82,7 +82,7 @@
 							id="ProfilePic"
 							src ="data:<%= user.profile_pic.contentType %>;base64,<%= user.profile_pic.data.toString('base64') %>"
 							alt= "<%=user.username%>_profile_picture"
-							class = "rounded-full m-auto w-full h-full userselect-none"/>
+							class = "rounded-full m-auto w-full h-full userselect-none object-cover"/>
 						<div class =" rounded-full w-[15px] h-[15px] absolute bottom-0 
 							 left-auto right-0 border-white border-[1px] bg-black">
 							<img
