--- a/views/partials/mainPage/profilePicDisplay_messageB.ejs
+++ b/views/partials/mainPage/profilePicDisplay_messageB.ejs
@@ -2,7 +2,7 @@
 onclick = "location.href='<%= mess.user.url%>'" 
 class = "cursor-pointer"
 id = "AvatarField">
-	<% var ProfilePicStyle = "w-[100px] h-[100px] m-auto rounded-full" %>
+	<% var ProfilePicStyle = "w-[100px] h-[100px] m-auto rounded-full object-cover" %>
 	<div 
 	class = ""
 	id = "AvatarField">
