--- a/views/register.ejs
+++ b/views/register.ejs
@@ -131,5 +131,6 @@
       <%- include('partials/footer') %>
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <%- include('partials/authentication/validateRegistration')%>
 </body>
 </html>
